<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SportifyAndroidApp</string>
    <string name="title_section3">Session</string>
    <string name="title_section2">Pedometer</string>
    <string name="title_section1">Section Upload</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string><string name="step_length_setting">Step length</string><string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string><string name="body_weight_setting">Body weight</string><string name="body_weight_setting_details">For calorie calculation</string><string name="body_height_setting_details">For VO2max calculation</string><string name="body_height_setting">Body height</string><string name="age_setting">Age</string><string name="age_setting_details">For trimp and calorie calculation</string><string name="centimeters">centimeters</string><string name="inches">inches</string><string name="kilograms">kilograms</string><string name="pounds">pounds</string><string name="body_weight_setting_title">Enter your body weight</string><string name="body_height_setting_title">Enter your body height</string><string name="steps_settings_title">Basic Settings</string><string name="step_length_setting_title">Enter your step length</string><string name="age_setting_title">Enter your age</string>
    <string name="years">years</string>
    <string name="gender">(0=female; 1=male)</string>
    <string name="gender_setting">Gender</string>
    <string name="gender_setting_details">(0=female; 1=male)</string>
    <string name="gender_setting_title">Enter your gender</string>
    <string name="par_setting_title">Enter your PA-R</string>
    <string name="par_setting_details">Physical Activity Rating</string>
    <string name="par_setting">PA-R</string>
    <string name="vomax">ml/kg/min</string>
    <string name="pulse">pulse</string>
    <string name="hrrest_setting_title">Enter your resting HR</string>
    <string name="hrrest_setting">Resting HR</string>
    <string name="hrrest_setting_details">For trimp calculation</string>
    <string name="par">-</string>

</resources>