<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/steps_settings_title">
            
        <ListPreference
                android:key="par"
                android:title="PA-R"
                android:summary="The Physical Activity Rating"
                android:entries="@array/par_preference"
                android:entryValues="@array/par_preference_values"
                android:dialogTitle="PA-R"
                android:defaultValue="4" />

        <com.msports.sportify.preferences.StepLengthPreference
                android:key="step_length"
                android:title="@string/step_length_setting"
                android:summary="@string/step_length_setting_details"
                android:dialogTitle="@string/step_length_setting_title"
                android:defaultValue="50" />
            
        <com.msports.sportify.preferences.BodyWeightPreference
                android:key="body_weight"
                android:title="@string/body_weight_setting"
                android:summary="@string/body_weight_setting_details"
                android:dialogTitle="@string/body_weight_setting_title"
                android:defaultValue="50" />
        
        <com.msports.sportify.preferences.BodyHeightPreference
                android:key="body_height"
                android:title="@string/body_height_setting"
                android:summary="@string/body_height_setting_details"
                android:dialogTitle="@string/body_height_setting_title"
                android:defaultValue="170" />
        
        <com.msports.sportify.preferences.AgePreference
                android:key="age"
                android:title="@string/age_setting"
                android:summary="@string/age_setting_details"
                android:dialogTitle="@string/age_setting_title"
                android:defaultValue="25" />
        
        <com.msports.sportify.preferences.GenderPreference
                android:key="gender"
                android:title="@string/gender_setting"
                android:summary="@string/gender_setting_details"
                android:dialogTitle="@string/gender_setting_title"
                android:defaultValue="1" />
        
        <com.msports.sportify.preferences.RestingHeartRatePreference
                android:key="hrrest"
                android:title="@string/hrrest_setting"
                android:summary="@string/hrrest_setting_details"
                android:dialogTitle="@string/hrrest_setting_title"
                android:defaultValue="45" />

    </PreferenceCategory>
    
</PreferenceScreen>